Added logo and fixed UI

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Final Moment Context API</title>
+    <title>Final Moment Repo Manager</title>
     <meta name="description" content="A powerful interface for the Final Moment Context API">
   </head>
   <body>
