Index html changes

--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/fm_logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <boltAction type="file" filePath="index.html"><!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Moment Repo Manager</title>
-    <meta name="description" content="A powerful interface for the Final Moment Context API">
+    <meta name="description" content="A powerful interface for the Final Moment Context API" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
     <div id="root"></div>
